--- a/frontend/src/core/components/Purchase/Purchase.scss
+++ b/frontend/src/core/components/Purchase/Purchase.scss
@@ -1,7 +1,6 @@
 @import "../../../scss/Core.scss";
 
 .rc-slider-tooltip {
-
   .rc-slider-tooltip-arrow {
     border-top-color: transparent !important;
   }
@@ -20,24 +19,24 @@
   }
 
   .rc-slider-tooltip-inner {
-    text-transform: capitalize;
     background-color: $form-label-font-color;
     font-family: $primary-font-family;
     font-size: 14px;
+    font-weight: 400;
     height: 32px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    line-height: 30px;
+    padding: 0 20px;
     margin-top: -35px;
     border-radius: $default-border-radius;
     color: $primary-color;
     box-shadow: unset;
-    font-weight: 700;
   }
 }
 
 #purchase {
+  .title-page {
+    padding: 0;
+  }
 
   h1 {
     text-transform: uppercase;
@@ -69,12 +68,22 @@
     margin-bottom: 0;
   }
 
-  .relays-column, .order-summary-column {
-    margin-top: 35px;
+  .relays-column,
+  .order-summary-column {
+    margin-top: 30px;
+  }
+
+  .relays-column {
+    padding-left: 0;
+    padding-right: 9px;
+  }
+
+  .order-summary-column {
+    padding-left: 9px;
+    padding-right: 0;
   }
 
   .price-card {
-
     margin: 0px 10px 10px 0px;
     text-align: center;
     background-color: #515151;
@@ -89,57 +98,49 @@
     }
   }
 
-  h4.alert-max {
-    text-transform: uppercase;
-    font-weight: 800;
-  }
-
-  p.alert-max {
-    font-weight: 400 !important;
-    font-size: 18px !important;
-  }
-
-  .calc {
+  .slider-wrapper {
+    height: 228px;
+    margin-bottom: 40px;
     display: flex;
+    align-items: center;
+    flex-grow: 2;
+    padding: 0 30px;
+    border-radius: $panel-radius;
+    box-shadow: $default-box-shadow;
 
-    .slider-wrapper {
-      height: 228px;
-      margin-bottom: 50px;
-      display: flex;
-      align-items: center;
-      flex-grow: 2;
-      padding: 60px 40px;
+    .rc-slider-rail {
       border-radius: $panel-radius;
-      box-shadow: $default-box-shadow;
+    }
 
-      .rc-slider-mark-text {
-        font-size: 1.5em;
-        font-family: "Lato";
+    .rc-slider-mark-text {
+      font-size: 0.875rem;
+      font-family: "Lato";
+      font-weight: 300;
 
-        &,
-        p {
-          font-weight: 300;
-        }
-
-        &:first-of-type {
-          margin-top: 10px;
-          transform: translateX(0) !important;
-        }
-
-        &:last-of-type {
-          margin-top: 10px;
-          transform: translateX(-52%) !important;
-        }
+      .average-stake-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
       }
 
-      .rc-slider-mark-text:last-of-type {
-        margin-left: -42px;
-        width: 100%;
+      &:first-of-type {
+        margin-top: 10px;
+        transform: translateX(0) !important;
       }
 
-      .rc-slider-dot {
-        display: none;
+      &:last-of-type {
+        margin-top: 10px;
+        transform: translateX(-52%) !important;
       }
+    }
+
+    .rc-slider-mark-text:last-of-type {
+      margin-left: -42px;
+      width: 100%;
+    }
+
+    .rc-slider-dot {
+      display: none;
     }
 
     .p-badge {
@@ -161,10 +162,19 @@
   }
 
   .max-alert {
-    padding: 5px 15px 20px 35px;
+    padding: 25px 15px 20px 30px;
 
-    head {
-      margin-bottom: -10px;
+    h4 {
+      font-weight: 800;
+      text-transform: uppercase;
+      line-height: normal;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 14px !important;
+      font-weight: 400 !important;
+      line-height: normal;
     }
   }
 }
