--- a/frontend/src/core/components/DefaultLayout/BreadCrumb/BreadCrumb.scss
+++ b/frontend/src/core/components/DefaultLayout/BreadCrumb/BreadCrumb.scss
@@ -3,12 +3,31 @@
 #breadcrumbs {
   font-weight: 400;
   font-family: "Open Sans";
+  height: 50px;
 
   .breadcrumb {
     background-color: transparent;
+    padding-left: 0;
+    margin-top: 10px;
 
     li {
       color: $dark-gray;
+      padding-left: 1px;
+
+
+      span,
+      &::before {
+        color: $light-gray;
+        padding-right: 1px;
+        padding-left: 0;
+      }
+
+      &.is-active {
+        span {
+          color: $dark-gray;
+        }
+      }
+
     }
   }
 }
