Some styles and text rename to match Zeplin and Polina changes.

--- a/frontend/src/core/components/AuthSidebar/AuthSidebar.scss
+++ b/frontend/src/core/components/AuthSidebar/AuthSidebar.scss
@@ -1,9 +1,8 @@
 @import "../../../scss/Variables/Fonts";
 
 #auth-sidebar {
-  margin-top: 35%;
-  padding-top: 30px;
-  padding-left: 60px;
+  margin-top: 8rem;
+  padding: 0 50px;
 
   h1 {
     font-family: $secondary-font-family;
