--- a/frontend/src/scss/Auth.scss
+++ b/frontend/src/scss/Auth.scss
@@ -1,13 +1,13 @@
 @import "Core";
 
 .auth-page {
-  h2 {
-    font-size: 30px;
-    margin-bottom: 1em;
-  }
-
   #sidebar {
     height: 100vh;
+
+    h2 {
+      font-size: 30px;
+      margin-bottom: 1em;
+    }
   }
 
   .form-control,
@@ -24,9 +24,9 @@
   }
 
   #logo-white {
-    width: 65%;
+    width: 55%;
     margin-top: 40px;
-    margin-left: 40px;
+    margin-left: 50px;
   }
 
   .content {
@@ -46,7 +46,7 @@
 
     .change {
       margin-top: 50px;
-      margin-bottom: 20vh;
+      margin-bottom: 8rem;
       margin-right: 30px;
       display: flex;
       justify-content: flex-end;
@@ -62,6 +62,7 @@
         text-transform: uppercase;
         font-size: 2.5em;
         font-weight: 700;
+        margin-bottom: 2.5rem;
       }
 
       #main-form {
@@ -74,6 +75,12 @@
 
         .form-group {
           margin-bottom: 20px;
+
+          &.password {
+            .form-control {
+              margin-bottom: 0;
+            }
+          }
         }
       }
 
