--- a/frontend/src/views/Payment/OrderSummary/OrderSummary.scss
+++ b/frontend/src/views/Payment/OrderSummary/OrderSummary.scss
@@ -1,6 +1,22 @@
 @import "../../../scss/Core.scss";
 
 #order-summary {
+  .payment-method-column {
+    padding-right: 9px;
+    padding-left: 0;
+  }
+
+  .review-order-column {
+    padding-right: 0;
+    padding-left: 9px;
+  }
+
+  .cards-container,
+  .review-order-container {
+    border-radius: $table-radius;
+    box-shadow: $default-box-shadow;
+    padding: 45px 20px;
+  }
 
   h1 {
     text-transform: uppercase;
@@ -16,7 +32,7 @@
     text-transform: uppercase;
     font-family: $secondary-font-family;
     color: $secondary-color;
-    font-size: 22px;
+    font-size: 18px;
     font-weight: 700;
     font-stretch: normal;
     font-style: normal;
@@ -42,19 +58,7 @@
     margin-bottom: 0;
   }
 
-  .agree {
-    font-family: $primary-font-family;
-    font-size: 14px;
-    color: $dark-gray;
-
-    &,
-    a {
-      font-weight: 300;
-    }
-  }
-
   .cards {
-    height: 25vh;
     overflow-x: auto;
   }
 
@@ -70,6 +74,7 @@
       letter-spacing: -0.82px;
       text-align: center;
       color: $primary-color;
+      margin-bottom: 0;
     }
 
     p {
@@ -85,33 +90,61 @@
       display: flex;
       justify-content: space-between;
       align-items: baseline;
+      margin-bottom: 20px;
 
-      p {
-        margin-bottom: 10px;
-      }
-
-      p:first-of-type {
+      span:first-of-type {
         font-family: $primary-font-family;
-        font-size: 16px;
+        font-size: 14px;
         font-weight: 300;
         letter-spacing: -0.38px;
         color: #888888;
       }
 
-      p:last-of-type {
+      span:last-of-type {
         color: $primary-color;
-        font-size: 1.8em;
+        font-size: 1.5rem;
         font-weight: 700;
+      }
+    }
+
+    .item:last-child {
+      margin-bottom: 25px;
+    }
+  }
+
+  hr {
+    height: 2px;
+    border-width: 2px;
+    border-color: #f5f5f5;
+  }
+
+  .form-check {
+    .form-check-label {
+      span {
+        font-family: $primary-font-family;
+        font-size: 0.875rem;
+        font-weight: 300;
+        line-height: normal;
+        color: $dark-gray;
       }
     }
   }
 
-  .form-check-label {
-    p {
-      font-size: 1.1em;
-      font-weight: 300 !important;
-      margin-top: 2px;
+  .agree-terms {
+    line-height: 0;
+    padding-bottom: 0;
+    bottom: 0;
+
+    .form-check-label {
+      line-height: 16px;
     }
+  }
+
+  .terms-link {
+    font-size: 0.875rem;
+    font-weight: 300;
+    color: $primary-color;
+    margin-left: 22px;
   }
 
   .payment-method {
@@ -137,6 +170,7 @@
   }
 
   .confirm {
-    width: auto;
+    width: 146px;
+    margin-top: 20px;
   }
 }
