Further styling changes in support pages

--- a/frontend/src/views/Support/PrivacyPolicy.scss
+++ b/frontend/src/views/Support/PrivacyPolicy.scss
@@ -12,10 +12,10 @@
     line-height: 1.27 !important;
   }
 
-  .address h3 {
+  .address-updated {
     font-family: $secondary-font-family;
     font-size: 18px;
-    font-weight: normal;
+    font-weight: normal !important;
     font-stretch: normal;
     font-style: normal;
     line-height: 2.11;
