--- a/frontend/src/views/Support/TermsOfService.scss
+++ b/frontend/src/views/Support/TermsOfService.scss
@@ -1,4 +1,6 @@
 @import "../../scss/Core.scss";
+@import "../../scss/Variables/Colors.scss";
+@import "../../scss/Variables/Fonts.scss";
 
 #privacy-policy {
   .wrapper {
@@ -53,10 +55,10 @@
     line-height: 1.27 !important;
   }
 
-  .address h3 {
+  .address-updated {
     font-family: $secondary-font-family;
     font-size: 18px;
-    font-weight: normal;
+    font-weight: normal !important;
     font-stretch: normal;
     font-style: normal;
     line-height: 2.11;
@@ -105,6 +107,10 @@
     line-height: 2.36 !important;
   }
 
+  .bold {
+    font-weight: bold !important;
+  }
+
   .center {
     text-align: center !important;
   }
@@ -143,5 +149,8 @@
 
   .no-bullet {
     list-style-type: none;
+  }
+  .top-margin {
+    margin-top: 1.5em !important;
   }
 }
