--- a/frontend/src/views/Support/SupportPages.scss
+++ b/frontend/src/views/Support/SupportPages.scss
@@ -157,6 +157,9 @@
   .align-ul {
     margin-left: 65px !important;
   }
+  .align-ul-bottom {
+    margin-left: -20px !important;
+  }
 
   .center-header {
     margin: 0 auto;
