--- a/frontend/src/core/components/Payment/CardDisplay/CardDisplay.scss
+++ b/frontend/src/core/components/Payment/CardDisplay/CardDisplay.scss
@@ -1,9 +1,12 @@
+@import '../../../../scss/Variables/Colors.scss';
+
 .card-display {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  border-bottom: 1px solid rgba(90, 90, 90, 0.1);
+  border-bottom: 1px solid rgba(6, 32, 46, 0.1);
+  font-size: 0.875rem;
+  color: $secondary-color;
 
   .name {
     font-weight: 300;
