--- a/frontend/src/views/Payment/Checkout/Checkout.scss
+++ b/frontend/src/views/Payment/Checkout/Checkout.scss
@@ -2,8 +2,8 @@
 
 #nodes-checkout {
   .header {
-    padding-left: 35px;
-    padding-right: 35px;
+    padding: 0;
+    margin-bottom: 35px;
 
     h1 {
       text-transform: uppercase;
@@ -11,6 +11,7 @@
       color: $form-label-font-color;
       font-size: 30px;
       font-weight: 800;
+      margin-bottom: 0;
     }
 
     p {
@@ -20,6 +21,10 @@
       font-weight: 300;
       letter-spacing: normal;
       margin-bottom: 0;
+    }
+
+    .cta {
+      min-width: 140px;
     }
   }
 
@@ -36,19 +41,13 @@
 
 
   .segment {
-    padding: 35px;
-    margin-left: 20px;
-    margin-right: 20px;
+    padding: 35px 30px;
     border-radius: 5px;
     box-shadow: $default-box-shadow;
 
     hr {
-      background-color: $light-gray;
+      background-color: rgba(6, 32, 46, 0.1);
     }
-  }
-
-  .cta {
-    width: auto;
   }
 
   .title-page h3 {
@@ -57,6 +56,8 @@
   }
 
   .app-steps {
+    width: 100%;
+
     .rc-steps-item-title {
       white-space: pre-wrap;
       margin-top: 10px;
@@ -82,12 +83,14 @@
       margin-top: 30px;
     }
 
-    p {
+    span {
+      font-family: $primary-font-family;
       font-size: 16px;
       color: #656565;
+      margin-bottom: 15px;
     }
 
-    p:last-of-type {
+    span:last-of-type {
       font-size: 14px;
       font-weight: 300;
     }
@@ -109,7 +112,7 @@
       font-weight: 800;
     }
 
-    .label.total p {
+    .label.total span {
       font-weight: 700;
       color: #06202E;
       font-family: "Open Sans";
@@ -121,6 +124,8 @@
       font-family: "Open Sans";
       font-size: 18px;
       font-weight: 700;
+      letter-spacing: -0.49px;
+      margin: 30px 0;
     }
 
     .label {
@@ -135,11 +140,18 @@
     color: $dark-gray;
     font-weight: 300;
     letter-spacing: normal;
+    display: flex;
+    align-items: center;
+
+    img {
+      margin-right: 10px;
+    }
 
     .link {
       font-weight: 300;
       color: $primary-color;
       cursor: pointer;
+      margin-right: 5px;
     }
 
     .link:hover {
