Add breadcrumbs to nodes

--- a/frontend/src/core/components/DefaultLayout/BreadCrumb/BreadCrumb.scss
+++ b/frontend/src/core/components/DefaultLayout/BreadCrumb/BreadCrumb.scss
@@ -3,7 +3,8 @@
 #breadcrumbs {
   font-weight: 400;
   font-family: "Open Sans";
-  height: 50px;
+  height: 30px;
+  margin-bottom: 35px;
 
   .breadcrumb {
     background-color: transparent;
