Progress creating printable view.

--- a/frontend/src/views/Payment/Checkout/Checkout.scss
+++ b/frontend/src/views/Payment/Checkout/Checkout.scss
@@ -162,3 +162,21 @@
     }
   }
 }
+
+@media print {
+  #main-logo {
+    display: none;
+  }
+
+  .user-dropdown {
+    display: none;
+  }
+
+  #sidebar {
+    display: none;
+  }
+
+  #nodes-checkout {
+    display: none;
+  }
+}
