--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -210,6 +210,7 @@ input {
 }
 
 .alert {
+  width: 100%;
   min-height: 40px;
   font-family: $secondary-font-family;
   box-shadow: $default-box-shadow;
