Added default variables to AppPassphrase.

--- a/frontend/src/views/Apps/AppPassphrase/AppPassphrase.scss
+++ b/frontend/src/views/Apps/AppPassphrase/AppPassphrase.scss
@@ -107,6 +107,12 @@
 
   .stats {
     margin-top: 2rem;
+
+    .p-badge-body {
+      h2 {
+      text-transform: capitalize;
+      }
+    }
   }
 
   .app-networks {
