--- a/frontend/src/views/Apps/Import/Import.scss
+++ b/frontend/src/views/Apps/Import/Import.scss
@@ -26,6 +26,10 @@
     right: 130px;
   }
 
+  .invalid-account.validate {
+    top: 90px;
+  }
+
   .upload-key {
     white-space: nowrap;
     padding: 3px 25px;
