Fix bugs on infinite scroll, added summary data

--- a/frontend/src/scss/Views/Main.scss
+++ b/frontend/src/scss/Views/Main.scss
@@ -100,7 +100,7 @@
 
         .body {
           max-height: 435px;
-          overflow-x: hidden;
+          // overflow-x: hidden;
 
           .search-panel {
             padding: 0 22px;
