Add network error messages to app/node detail

--- a/frontend/src/scss/Views/Detail.scss
+++ b/frontend/src/scss/Views/Detail.scss
@@ -25,7 +25,7 @@
       margin-left: 12px;
     }
 
-    img {
+    img.account-icon {
       width: 45px;
       height: 45px;
       border-radius: 50%;
