--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -410,6 +410,13 @@ button {
   box-shadow: $default-box-shadow;
   border-radius: $table-radius;
 
+  thead,
+  tbody tr {
+    display: table;
+    width: 100%;
+    table-layout: fixed;
+  }
+
   thead {
     text-transform: uppercase;
     color: black;
@@ -447,6 +454,7 @@ button {
 
   tbody {
     padding: 0 22px 0 22px;
+    display: block;
 
     tr {
       color: gray;
@@ -478,20 +486,12 @@ button {
 
   &.scroll {
 
-    thead,
-    tbody tr {
-      display: table;
-      width: 100%;
-      table-layout: fixed;
-    }
-
     thead {
       width: calc(100% - 42px);
     }
 
     tbody {
       width: calc(100% - 16px);
-      display: block;
       height: auto;
       max-height: calc(325px - 52px);
       overflow: auto;
@@ -574,8 +574,7 @@ button {
     }
 
     tbody {
-      visibility: hidden;
-      display: absolute;
+      display: none;
       height: 0px;
     }
   }
