Fix T&C UI and links to it

--- a/frontend/src/views/Support/SupportPages.scss
+++ b/frontend/src/views/Support/SupportPages.scss
@@ -46,6 +46,10 @@
     }
   }
 
+  .address {
+    margin: 0 auto;
+  }
+
   .address p {
     font-family: $secondary-font-family;
     font-size: 30px;
