--- a/frontend/src/views/Payment/OrderSummary/OrderSummary.scss
+++ b/frontend/src/views/Payment/OrderSummary/OrderSummary.scss
@@ -109,7 +109,7 @@
 
       span:last-of-type {
         color: $primary-color;
-        font-size: 1.5rem;
+        font-size: 16px;
         font-weight: 700;
         text-align: right;
       }
