--- a/frontend/src/scss/Views/Detail.scss
+++ b/frontend/src/scss/Views/Detail.scss
@@ -89,7 +89,17 @@
       color: $secondary-color;
     }
   }
-
+  .copy-button {
+    background-color: #F5F5F5;
+    margin-top: 0px;
+    float: right;
+    cursor: pointer;
+    img {
+      display: inline-block;
+      height: 22px;
+      width: 22px;
+    }
+  }
   .stats {
     margin-top: 25px;
     margin-left: -30px;
