--- a/frontend/src/views/Support/PrivacyPolicy.scss
+++ b/frontend/src/views/Support/PrivacyPolicy.scss
@@ -3,6 +3,53 @@
 @import "../../scss/Variables/Fonts.scss";
 
 #privacy-policy {
+  .wrapper {
+    padding-left: 10em;
+    padding-right: 10em;
+  }
+
+  .go {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+
+    .text {
+      color: $light-gray;
+      margin-left: 8px;
+      font-family: $primary-font-family;
+      font-size: 16px;
+      font-weight: 400;
+    }
+
+    .icon {
+      height: 18px;
+    }
+
+    &.top {
+      .text {
+        margin-left: 5px;
+      }
+
+      .icon {
+        height: 12px;
+      }
+    }
+
+    &:hover {
+      .text {
+        color: darken($color: $light-gray, $amount: 20%);
+      }
+
+      .icon {
+        filter: contrast(10%);
+      }
+    }
+  }
+
+  .address {
+    margin: 0 auto;
+  }
+
   .address p {
     font-family: $secondary-font-family;
     font-size: 30px;
@@ -23,7 +70,19 @@
     text-align: center;
     color: $dark-gray;
   }
-  .policy {
+
+  .secondary-font-family {
+    font-family: $secondary-font-family;
+    font-size: 14px;
+    font-weight: 300;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 2.36;
+    letter-spacing: normal;
+    text-align: justify;
+    color: #000000;
+  }
+  .primary-font-family {
     font-family: $primary-font-family;
     font-size: 14px;
     font-weight: 300;
@@ -34,7 +93,6 @@
     text-align: justify;
     color: #000000;
   }
-
   span {
     font-family: $secondary-font-family;
     font-size: 14px;
@@ -45,6 +103,24 @@
     letter-spacing: normal;
     text-align: center;
     color: $dark-gray;
+    line-height: 2.36;
+  }
+
+  .not-bold {
+    font-weight: 300 !important;
+    line-height: 2.36 !important;
+  }
+
+  .bold {
+    font-weight: bold !important;
+  }
+
+  .center {
+    text-align: center !important;
+  }
+
+  .justify {
+    text-align: justify !important;
   }
 
   p {
@@ -73,5 +149,50 @@
     letter-spacing: normal;
     text-align: justify;
     color: $dark-gray;
+  }
+
+  .no-bullet {
+    list-style-type: none;
+  }
+  .top-margin {
+    margin-top: 1.5em !important;
+  }
+
+  .align-ul {
+    margin-left: 65px !important;
+  }
+  .align-ul-bottom {
+    margin-left: -20px !important;
+  }
+
+  .center-header {
+    margin: 0 auto;
+  }
+
+  .unsubscribe {
+    color: $dark-gray !important;
+    line-height: normal !important;
+    margin-top: 15% !important;
+  }
+  .sign-up-btn {
+    font-family: $primary-font-family;
+    font-size: 12px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: $white-smoke;
+  }
+  .btn-size {
+    width: 130px;
+    height: 32px;
+    border-radius: 25px;
+    background-color: $border-blue;
+    margin-left: 35%;
+  }
+
+  .color-dark-gray-1 {
+    color: #494949 !important;
   }
 }
