Fixing Chains issues
Close #228 Close #225

--- a/frontend/src/core/components/Chains/Chains.scss
+++ b/frontend/src/core/components/Chains/Chains.scss
@@ -25,8 +25,8 @@
     margin-top: 10px;
 
     .search-panel {
-      max-width: 395px;
       margin-left: 36px;
+      margin-right: 36px;
 
       .search-input {
         margin-top: 15px;
