Fixing several issues
Close #221

--- a/frontend/src/views/Payment/OrderSummary/OrderSummary.scss
+++ b/frontend/src/views/Payment/OrderSummary/OrderSummary.scss
@@ -160,6 +160,7 @@
     font-size: 0.875rem;
     font-weight: 300;
     color: $primary-color;
+    margin-left: 22px;
   }
 
   .payment-container {
