--- a/frontend/src/core/components/ImageFileUpload/ImageFileUpload.scss
+++ b/frontend/src/core/components/ImageFileUpload/ImageFileUpload.scss
@@ -4,6 +4,10 @@
   width: 0;
   cursor: pointer;
 
+  @media(max-width: 1400px) {
+    margin-top: 10px;
+  }
+
   &:focus {
     outline: none;
   }
@@ -13,6 +17,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    @media(max-width: 1400px) {
+      img.icon {
+        margin-top: 4px;
+        width: 30px !important;
+        height: 30px !important;
+      }
+    }
 
     img.icon {
       margin-top: 8px;
@@ -33,6 +45,25 @@
     }
   }
 
+  @media(max-width: 1400px) {
+    .drop.drop-border {
+      width: 60px !important;
+      height: 60px !important;
+      border: solid 2px $primary-color;
+      border-radius: 50%;
+
+      &:focus {
+        outline: none;
+      }
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+  }
   .drop.drop-border {
     width: 80px;
     height: 80px;
