Closing several issues
Close #284
Close #286
Close #285
Close #254
Close #193

--- a/frontend/src/core/components/AppOrderSummary/AppOrderSummary.scss
+++ b/frontend/src/core/components/AppOrderSummary/AppOrderSummary.scss
@@ -34,6 +34,17 @@
         font-family: $primary-font-family;
       }
 
+      .minus {
+        position: absolute;
+        right: 155px;
+        margin-top: 6px;
+        text-transform: uppercase;
+        font-weight: 300;
+        font-size: 14px;
+        color: $dark-gray;
+        font-family: $primary-font-family;
+      }
+
       input {
         padding-right: 45px;
 
