--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -30,6 +30,53 @@
   color: #61dafb;
 }
 
+.app-mobile {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+
+  .indicator{
+    width: 150px;
+    height: 150px;
+  }
+
+  .title {
+    text-transform: uppercase;
+    font-weight: 800;
+    font-size: 40px;
+    color: #27a9e0;
+    text-align: center;
+    margin-top: 5px;
+    line-height: 40px;
+    font-family: $secondary-font-family;
+  }
+
+  .sub-title {
+    font-weight: 700;
+    font-size: 25px;
+    color: #FFFFFF;
+    text-align: center;
+    margin-top: 16px;
+    line-height: 30px;
+    font-family: $secondary-font-family;
+  }
+
+  .vertical-center {
+    position: absolute; /*Can also be `fixed`*/
+        left: 0;
+        right: 0;
+        top: 50%;
+        bottom: 0;
+        margin: auto;
+        -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+        /*Solves a problem in which the content is being cut when the div is smaller than its' wrapper:*/
+        max-width: 100%;
+        max-height: 100%;
+        overflow: auto;
+  }
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
