fixes #363, #376; gateway settings page fixes

--- a/frontend/src/views/Apps/GeneralSettings/GeneralSettings.scss
+++ b/frontend/src/views/Apps/GeneralSettings/GeneralSettings.scss
@@ -194,6 +194,11 @@
     }
   }
 
+  .tooltip-i {
+    margin-left: 10px;
+    margin-bottom: 3px;
+  }
+
   .whitelist {
     label {
       color: #5b5b5b;
