added map area to the pocket logo

--- a/frontend/src/core/components/DefaultLayout/AppNavbar/AppNavbar.scss
+++ b/frontend/src/core/components/DefaultLayout/AppNavbar/AppNavbar.scss
@@ -12,6 +12,7 @@
   height: 80px;
 
   #main-logo {
+    position: absolute;
     img {
       width: map_get($main-logo-size, width);
       height: map_get($main-logo-size, height);
