Fixing UI in Node creation
close #468

--- a/frontend/src/core/components/CreateForm/CreateForm.scss
+++ b/frontend/src/core/components/CreateForm/CreateForm.scss
@@ -77,4 +77,9 @@
       }
     }
   }
+
+  .description-node {
+    background-position-x: 99% !important;
+    padding-right: calc(1.5em + 1.00rem) !important;
+  }
 }
